# temp_experiment_analysis

./: FSR_distribution__no_lib.ipynb  README.md  high_temperature.ipynb  linear_regression_data.csv  stats_pressure-go.v2_23.csv  stats_pressure-go.v2_26.csv  stats_transys.2021_23.csv  stats_transys.2021_24.csv  temp_reg.ipynb
configs/: config.ini
data/: fsr21v_25.csv
data/3_onetech_2210/: review-result.ipynb
data/fsr21v_80/test1/: key.csv
data/fsr21v_80/test4/: key.csv
data/fsr21v_80/test5/: key.csv
data/fsr21v_m30/test1/: fsr.csv
data/fsr21v_m30/test2/: key.csv
data/fsr21v_m30/test3/: key.csv
data/fsr21v_m30/test4/: fsr.csv  key.csv
data/fsr21v_m30/test5/: fsr.csv
data/fsr22v/__position_001_(2,7)_(3,0)/1000g_-15/: pressure-go.v2.jsonl
data/fsr22v/__position_001_(2,7)_(3,0)/1000g_-30/: transys.2021.jsonl
data/fsr22v/__position_001_(2,7)_(3,0)/1000g_0/: pressure-go.v2.jsonl
data/fsr22v/__position_001_(2,7)_(3,0)/1000g_25/: transys.2021.jsonl
data/fsr22v/__position_001_(2,7)_(3,0)/1000g_50/: pressure-go.v2.jsonl  transys.2021.jsonl
data/fsr22v/__position_001_(2,7)_(3,0)/1000g_80/: pressure-go.v2.jsonl
data_preprocessing/: __init__.py  preprocessing.py
data_preprocessing/lib_external/: __init__.py
data_preprocessing/lib_external/biosignal/: README.md  __init__.py
data_preprocessing/lib_external/biosignal/camera/cpp/app/: CMakeLists.txt  cam.cc  cam.h  heart.cc  resp.cc  signalgo.cc  signalgo.h
data_preprocessing/lib_external/console/: output.py
ref/: high_temperature.ipynb
(+93 files in other folders)
